# VeriPatch

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  Makefile  Project-overview.md  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  promote.yml  release.yml
crates/veripatch-ai/: Cargo.toml
crates/veripatch-ai/src/: lib.rs  provider.rs
crates/veripatch-app/: Cargo.toml  build.rs  tauri.conf.json
crates/veripatch-app/frontend/: app.js  index.html  package.json  styles.css  vite.config.js
crates/veripatch-app/frontend/src/: App.jsx  main.jsx
crates/veripatch-app/frontend/src/components/: SettingsView.jsx  Sidebar.jsx  WorkspaceView.jsx  icons.jsx
crates/veripatch-app/frontend/src/constants/: ui.js
crates/veripatch-app/frontend/src/utils/: app.js
crates/veripatch-app/icons/: icon-dark.icns  icon.icns
crates/veripatch-app/src/: main.rs
crates/veripatch-app/src/desktop_ui/: actions.rs  commands.rs  components.rs  github.rs  mod.rs  storage.rs  types.rs  view.rs
crates/veripatch-cli/: Cargo.toml
crates/veripatch-cli/src/: main.rs
crates/veripatch-core/: Cargo.toml
crates/veripatch-core/src/: diff.rs  lib.rs  pipeline.rs  repo.rs  verdict.rs
crates/veripatch-core/src/pipeline/: dependencies.rs  mod.rs  scoring.rs
crates/veripatch-core/src/repo/: git.rs  mod.rs  prepare.rs
crates/veripatch-report/: Cargo.toml
crates/veripatch-report/src/: lib.rs  markdown.rs
crates/veripatch-rules/: Cargo.toml
crates/veripatch-rules/src/: lib.rs  rule.rs
crates/veripatch-rules/src/rule/: analysis.rs  mod.rs  types.rs
crates/veripatch-runners/: Cargo.toml
crates/veripatch-runners/src/: lib.rs  runner.rs
crates/veripatch-runners/src/runner/: command.rs  mod.rs  rust.rs  typescript.rs
docs/: architecture.md
examples/: README.md
