[workspace]
resolver = "2"
members = [
    "crates/veripatch-app",
    "crates/veripatch-cli",
    "crates/veripatch-core",
    "crates/veripatch-ai",
    "crates/veripatch-runners",
    "crates/veripatch-rules",
    "crates/veripatch-report",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/veripatch"
rust-version = "1.85"

[workspace.dependencies]
veripatch-core = { path = "crates/veripatch-core" }
veripatch-ai = { path = "crates/veripatch-ai" }
veripatch-runners = { path = "crates/veripatch-runners" }
veripatch-rules = { path = "crates/veripatch-rules" }
veripatch-report = { path = "crates/veripatch-report" }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
