[package]
name = "veripatch-app"
description = "VeriPatch desktop application (GPUI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "veripatch"
path = "src/main.rs"

[dependencies]
veripatch-core = { workspace = true }
veripatch-ai = { workspace = true }
veripatch-report = { workspace = true }

gpui.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
