[package]
name = "veripatch-app"
description = "VeriPatch desktop application (GPUI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "veripatch"
path = "src/main.rs"

[features]
default = []
desktop-ui = ["dep:gpui", "dep:gpui_platform"]

[dependencies]
veripatch-core = { workspace = true }
veripatch-ai = { workspace = true }
veripatch-report = { workspace = true }
veripatch-runners = { workspace = true }
veripatch-rules = { workspace = true }

gpui = { workspace = true, optional = true }
gpui_platform = { workspace = true, optional = true }
anyhow.workspace = true
clap.workspace = true
rfd = "0.15"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
