[package]
name = "veripatch-cli"
description = "VeriPatch command-line interface"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "veripatch-cli"
path = "src/main.rs"

[dependencies]
veripatch-core = { workspace = true }
veripatch-ai = { workspace = true }
veripatch-report = { workspace = true }

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
