[package]
name = "veripatch-report"
description = "Report generation for VeriPatch (Markdown, JSON)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
veripatch-core = { workspace = true }
veripatch-runners = { workspace = true }
veripatch-rules = { workspace = true }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
