[package]
name = "veripatch-rules"
description = "Security and pattern detection rules for VeriPatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
tracing.workspace = true
